crates/nexus/tests/compile_fail/aggregate_error_not_std_error.stderr
error[E0277]: the trait bound `BadError: std::error::Error` is not satisfied
  --> tests/compile_fail/aggregate_error_not_std_error.rs:32:18
   |
32 |     type Error = BadError; // should fail: BadError doesn't impl Error
   |                  ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `std::error::Error` is not implemented for `BadError`
  --> tests/compile_fail/aggregate_error_not_std_error.rs:23:1
   |
23 | enum BadError {
   | ^^^^^^^^^^^^^
note: required by a bound in `nexus::kernel::Aggregate::Error`
  --> src/kernel/aggregate.rs
   |
   |     type Error: Error + Send + Sync + Debug + 'static;
   |                 ^^^^^ required by this bound in `Aggregate::Error`
